--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -11,7 +11,7 @@
     <header>What To Cook Today?</header>
     <main>
         <form class="search">
-            <input type="text" class="search__input" name="input" required placeholder="Search for a recipe">
+            <input type="text" class="search__bar" name="input" required placeholder="Search for a recipe">
             <input type="button" class="btn search__btn" value="">
         </form>
     </main>
