Add function to update UI

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -10,10 +10,12 @@
 <body>
     <header>What To Cook Today?</header>
     <main>
-        <form class="search">
-            <input type="text" class="search__bar" name="input" required placeholder="Search for a recipe">
-            <input type="button" class="btn search__btn" value="">
-        </form>
+        <section class="search">
+            <form class="search__form">
+                <input type="text" class="search__bar" name="input" required placeholder="Search for a recipe">
+                <input type="button" class="btn search__btn" value="">
+            </form>
+        </section>
     </main>
     <footer></footer>
 </body>
