Add error msg to UI

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -16,6 +16,8 @@
                 <input type="button" class="btn search__btn" value="">
             </form>
         </section>
+        <section class="result"></section>
+        <section class="recipe"></section>
     </main>
     <footer></footer>
 </body>
