Render multiple search results

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -13,7 +13,7 @@
         <section class="search">
             <form class="search__form">
                 <input type="text" class="search__bar" name="input" required placeholder="Search for a recipe">
-                <input type="button" class="btn search__btn" value="">
+                <button class="btn search__btn">Search</button>
             </form>
         </section>
         <section class="result"></section>
