Add Edamam attribution

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://developer.edamam.com/attribution/badge.js"></script>
     <title>What To Cook Today?</title>
 </head>
 
@@ -23,7 +24,9 @@
                 <div class="result__pagination"></div>
             </section>
         </main>
-        <footer></footer>
+        <footer>
+            <div id="edamam-badge" data-color="transparent"></div>
+        </footer>
     </div>
 </body>
 
