--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -15,7 +15,9 @@
             <section class="search">
                 <form class="search__form">
                     <input type="text" class="search__bar" name="input" required placeholder="Search for a recipe">
-                    <button class="btn btn--search"></button>
+                    <!-- TODO className btn is necessary??? -->
+                    <!-- <button class="btn search__btn"></button> -->
+                    <button class="btn search__btn"></button>
                 </form>
             </section>
             <section class="result">
