--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -15,15 +15,13 @@
             <section class="search">
                 <form class="search__form">
                     <input type="text" class="search__bar" name="input" required placeholder="Search for a recipe">
-                    <!-- TODO className btn is necessary??? -->
-                    <!-- <button class="btn search__btn"></button> -->
                     <button class="btn search__btn"></button>
                 </form>
             </section>
-            <section class="result">
-                <div class="result__count"></div>
-                <div class="result__recipe"></div>
-                <div class="result__pagination"></div>
+            <section class="recipe">
+                <div class="recipe__count"></div>
+                <div class="recipe__result"></div>
+                <div class="recipe__pagination"></div>
             </section>
         </main>
         <footer>
