Add styles to search and recipe section

--- a/src/client/styles/_base.scss
+++ b/src/client/styles/_base.scss
@@ -62,3 +62,11 @@ ul {
 	width: 1.5rem;
 	height: 1.5rem;
 }
+
+.btn {
+	display: inline-block;
+	padding: 0;
+	border: none;
+	background: transparent;
+	cursor: pointer;
+}
