--- a/src/client/styles/_recipe.scss
+++ b/src/client/styles/_recipe.scss
@@ -21,9 +21,16 @@
 }
 
 .recipe {
+	&__count {
+		padding: 1rem;
+	}
+
 	&__result {
 		display: grid;
 		grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
 		gap: 1rem;
+		justify-items: center;
+		align-items: stretch;
+		padding: 1rem;
 	}
 }
