--- a/src/client/styles/_search.scss
+++ b/src/client/styles/_search.scss
@@ -1,6 +1,30 @@
 .search {
-	&__btn {
-		// background: url(../img/symbol-defs.svg#icon-search) center no-repeat;
-		cursor: pointer;
+	padding: 1rem;
+
+	&__form {
+		border: 1px solid #777;
+		display: flex;
+		justify-content: space-between;
 	}
+
+	&__bar {
+		border: none;
+		flex-grow: 1; // default 0
+
+		&:focus {
+			outline: none;
+		}
+	}
+
+	// &__btn {
+	// 	display: inline-block;
+	// 	padding: 0;
+	// 	border: none;
+	// 	background: transparent;
+	// }
+}
+
+.icon-search {
+	display: inline-block;
+	vertical-align: middle;
 }
