Set svg icons vertical align middle

--- a/src/client/styles/_search.scss
+++ b/src/client/styles/_search.scss
@@ -15,16 +15,9 @@
 			outline: none;
 		}
 	}
-
-	// &__btn {
-	// 	display: inline-block;
-	// 	padding: 0;
-	// 	border: none;
-	// 	background: transparent;
-	// }
 }
 
-.icon-search {
-	display: inline-block;
-	vertical-align: middle;
-}
+// .icon-search {
+// 	display: inline-block;
+// 	vertical-align: middle;
+// }
