Add styles to header section

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -10,11 +10,13 @@
 
 <body>
     <div class="container">
-        <header>What To Cook Today?</header>
+        <header>
+            <h1>What To Cook Today?</h1>
+        </header>
         <main>
             <section class="search">
                 <form class="search__form">
-                    <input type="text" class="search__bar" name="input" required placeholder="Search for a recipe">
+                    <input type="text" class="search__bar" name="input" required placeholder="Search for recipes">
                     <button class="btn search__btn"></button>
                 </form>
             </section>
