Create footer class

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -27,6 +27,7 @@
             </section>
         </main>
         <footer>
+            <nav class="footer__nav"></nav>
             <div id="edamam-badge" data-color="transparent"></div>
         </footer>
     </div>
