Refactor RecipeUI class

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -22,7 +22,7 @@
             </section>
             <section class="recipe">
                 <div class="recipe__count"></div>
-                <div class="recipe__result"></div>
+                <ul class="recipe__result"></ul>
                 <div class="recipe__pagination"></div>
             </section>
         </main>
