Create class to load icons

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -27,7 +27,9 @@
             </section>
         </main>
         <footer>
-            <nav class="footer__nav"></nav>
+            <nav class="footer__nav">
+                <ul class="footer__contact"></ul>
+            </nav>
             <div id="edamam-badge" data-color="transparent"></div>
         </footer>
     </div>
