Apply styles to footer section

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -26,11 +26,13 @@
                 <div class="recipe__pagination"></div>
             </section>
         </main>
-        <footer>
+        <footer class="footer">
             <nav class="footer__nav">
+                <div id="edamam-badge" data-color="transparent"></div>
                 <ul class="footer__contact"></ul>
             </nav>
-            <div id="edamam-badge" data-color="transparent"></div>
+            <p class="footer__disclaimer">This recipe app is inspired by Jonas Schmedtmann's Udemy course, cloned and
+                arranged by Emiri Begic.</p>
         </footer>
     </div>
 </body>
