--- a/src/client/styles/_recipe.scss
+++ b/src/client/styles/_recipe.scss
@@ -5,7 +5,6 @@
 	svg {
 		height: 6rem;
 		width: 6rem;
-		// fill: $color-primary;
 		animation: rotate 2s infinite linear;
 	}
 }
@@ -38,9 +37,29 @@
 		margin: 0 0.5rem;
 	}
 
+	&__meta {
+		display: flex;
+		flex-direction: column;
+		max-width: calc(300px * 0.9);
+	}
+
 	&__info {
 		display: flex;
 		align-items: center;
+	}
+
+	&__tags {
+		display: flex;
+		flex-wrap: wrap;
+	}
+
+	&__tag {
+		display: inline-block;
+		padding: 0.25rem 0.5rem;
+		margin: 0.5rem 0.5rem 0 0;
+		font: $font-half;
+		border: 1px solid $light-grey;
+		background: $light-grey;
 	}
 
 	&__pagination {
