--- a/src/client/styles/_base.scss
+++ b/src/client/styles/_base.scss
@@ -1,6 +1,7 @@
 // FONT
-$font-stack: 400 1rem 'Dosis', sans-serif;
-$font-half: 400 0.5rem 'Dosis', sans-serif;
+$font-stack: 300 1rem 'Poppins', sans-serif;
+$font-medium: 300 0.75rem 'Poppins', sans-serif;
+$font-small: 300 0.5rem 'Poppins', sans-serif;
 
 // // COLOR
 $light-grey: rgb(161, 161, 161);
