--- a/src/client/styles/_recipe.scss
+++ b/src/client/styles/_recipe.scss
@@ -27,14 +27,15 @@
 	&__result {
 		display: grid;
 		grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
-		gap: 1rem;
+		grid-column-gap: 1rem;
+		grid-row-gap: 3rem;
 		justify-items: center;
 		align-items: stretch;
 		padding: 1rem;
 	}
 
-	&__btn {
-		margin: 0 0.5rem;
+	&__card {
+		padding: 0 1rem;
 	}
 
 	&__meta {
@@ -44,8 +45,13 @@
 	}
 
 	&__info {
+		font: $font-medium;
 		display: flex;
 		align-items: center;
+	}
+
+	&__icon {
+		margin-right: 0.25rem;
 	}
 
 	&__tags {
@@ -57,7 +63,7 @@
 		display: inline-block;
 		padding: 0.25rem 0.5rem;
 		margin: 0.5rem 0.5rem 0 0;
-		font: $font-half;
+		font: $font-small;
 		border: 1px solid $light-grey;
 		background: $light-grey;
 	}
@@ -67,5 +73,9 @@
 		align-items: center;
 		justify-content: center;
 		padding: 1rem;
+	}
+
+	&__btn {
+		margin: 0 0.5rem;
 	}
 }
