--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
     <script src="https://developer.edamam.com/attribution/badge.js"></script>
     <title>What To Cook Today?</title>
 </head>
