--- a/src/client/styles/_base.scss
+++ b/src/client/styles/_base.scss
@@ -40,6 +40,11 @@ body {
 	font: $font-stack;
 }
 
+h2 {
+	font-size: 1rem;
+	font-weight: 500;
+}
+
 .container {
 	margin: 0 auto;
 	// width: 90vw;
