--- a/src/client/styles/_base.scss
+++ b/src/client/styles/_base.scss
@@ -23,7 +23,6 @@ $bp-small: 33rem; // 528px;
 * {
 	margin: 0;
 	padding: 0;
-	// border: 1px solid black;
 }
 
 *,
@@ -40,14 +39,8 @@ body {
 	font: $font-stack;
 }
 
-h2 {
-	font-size: 1rem;
-	font-weight: 500;
-}
-
 .container {
 	margin: 0 auto;
-	// width: 90vw;
 }
 
 img {
@@ -80,4 +73,8 @@ ul {
 	border: none;
 	background: transparent;
 	cursor: pointer;
+
+	&:focus {
+		outline: none;
+	}
 }
