--- a/src/client/styles/_footer.scss
+++ b/src/client/styles/_footer.scss
@@ -1,15 +1,13 @@
 .footer {
-	// display: flex;
-	// flex-direction: column;
 	display: block;
 	align-items: center;
-	// background: rgb(255, 231, 151);
+	padding: 1rem;
 
 	&__nav {
 		display: flex;
-		// flex-direction: column;
 		align-items: center;
 		justify-content: space-between;
+		padding-bottom: 0.5rem;
 	}
 
 	&__contact {
@@ -34,5 +32,5 @@
 }
 
 #edamam-badge {
-	width: 15%;
+	width: 20%;
 }
