Change scroll behavior to top

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -13,7 +13,9 @@
 <body>
     <div class="container">
         <header>
-            <h1>What To Cook Today?</h1>
+            <a class="link" href="#">
+                <h1>What To Cook Today?</h1>
+            </a>
         </header>
         <main>
             <section class="search">
