--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -4,6 +4,15 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+        content="What To Cook Today? is a simple single-page web application that allows users to search through web recipes." />
+    <meta name="title" property="og:title" content="What To Cook Today?">
+    <meta property="og:type" content="Website">
+    <meta name="image" property="og:image" content="https://live.staticflickr.com/65535/51289571648_da5b6a4afe_o.png">
+    <meta name="description" property="og:description"
+        content="What To Cook Today? is a simple single-page web application that allows users to search through web recipes.">
+    <meta name="author" content="Emiri Begic">
+    <link rel="icon" href="data:,">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
     <script src="https://developer.edamam.com/attribution/badge.js"></script>
